rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/RL_Assortment_Plan__c.object-meta.xml
<CustomObject>
    <description>Top-level container for a Ralph Lauren planned assortment, synced from Anaplan. One record per account per season per FOB.</description>
    <label>Assortment Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assortment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>