rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Wholesale account this plan belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo><relationshipLabel>Account</relationshipLabel><relationshipName>AssortmentPlans</relationshipName>
    <type>Lookup</type>
</CustomField>