rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Account_Target__c.field-meta.xml
<CustomField>
    <fullName>Account_Target__c</fullName>
    <description>Account-level seasonal dollar target from Anaplan</description>
    <label>Account Dollar Target</label>
    <precision>18</precision><scale>2</scale>
    <type>Currency</type>
</CustomField>