rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Anaplan_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Plan_ID__c</fullName>
    <description>External key used for upsert sync from Anaplan</description>
    <label>Anaplan Plan ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>