rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Buyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email__c</fullName>
    <description>Email address the share link was sent to</description>
    <label>Buyer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>