rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <description>Family of Business e.g. Outerwear Knitwear Bottoms</description>
    <label>Family of Business</label>
    <length>50</length>
    <type>Text</type>
</CustomField>