rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Last_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_DateTime__c</fullName>
    <description>Timestamp of the most recent successful Anaplan data sync</description>
    <label>Last Anaplan Sync</label>
    
    <type>DateTime</type>
</CustomField>