rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Locked_Date__c.field-meta.xml
<CustomField>
    <fullName>Locked_Date__c</fullName>
    <description>DateTime when Sofia locked the assortment view</description>
    <label>Date Locked by Sales Rep</label>
    
    <type>DateTime</type>
</CustomField>