rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>Assigned sales rep (e.g. Sofia)</description>
    <label>Sales Rep Owner</label>
    <referenceTo>User</referenceTo><relationshipLabel>Sales Rep Owner</relationshipLabel><relationshipName>OwnedAssortmentPlans</relationshipName>
    <type>Lookup</type>
</CustomField>