rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographic region for this assortment plan</description>
    <label>Region</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>NA</fullName>
        </value>
        <value>
            <fullName>EMEA</fullName>
        </value>
        <value>
            <fullName>APAC</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>