rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Selling season code e.g. AW26 SS27</description>
    <label>Season</label>
    <length>20</length>
    <type>Text</type>
</CustomField>