rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Shared_Date__c.field-meta.xml
<CustomField>
    <fullName>Shared_Date__c</fullName>
    <description>DateTime when the secure link was sent to the buyer</description>
    <label>Date Shared with Buyer</label>
    
    <type>DateTime</type>
</CustomField>