rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Shared_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>Shared_Link_Token__c</fullName>
    <description>UUID token appended to the Experience Cloud buyer URL for access control</description>
    <label>Buyer Share Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>