rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Workflow lifecycle status of this assortment plan</description>
    <label>Plan Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Draft</fullName>
        </value>
        <value>
            <fullName>In Review</fullName>
        </value>
        <value>
            <fullName>Shared with Buyer</fullName>
        </value>
        <value>
            <fullName>Locked</fullName>
        </value>
        <value>
            <fullName>Converted to Order</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>