rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Total_Planned_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Units__c</fullName>
    <description>Roll-up of all planned units across line items</description>
    <label>Total Planned Units</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>