rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Plan__c/fields/Total_Wholesale_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Wholesale_Cost__c</fullName>
    <description>Extended wholesale cost roll-up across all line items</description>
    <label>Total Planned Wholesale Cost</label>
    <precision>18</precision><scale>2</scale>
    <type>Currency</type>
</CustomField>